--- a/docs/第一单元_基本输入与输出/七彩灯的设置.md
+++ b/docs/第一单元_基本输入与输出/七彩灯的设置.md
@@ -1,1 +1,21 @@
-# 七彩灯的设置
+# 《七彩灯的设置》
+
+> 🧰  创趣星盒板载七彩灯、按键和显示屏
+
+<br><br>
+
+功能：色光的实现，原理上依靠RGB三色通道光线混合达成。调整每个通道的占空比0-100以获得不同颜色的灯光。
+
+例如：
+
+一种红光
+
+<img src="/images/docimg/Snipaste_2025-03-27_14-49-53.png" >
+
+一种紫光
+
+<img src="/images/docimg/Snipaste_2025-03-27_14-52-13.png" >
+
+最亮的白光
+
+<img src="/images/docimg/Snipaste_2025-03-27_14-54-55.png" >
