--- a/docs/第三单元_反馈与优化/模拟空调控制室温.md
+++ b/docs/第三单元_反馈与优化/模拟空调控制室温.md
@@ -1,1 +1,21 @@
-# 第三单元 反馈与优化
+# 《模拟空调控制室温过程*》
+
+> 🧰 创趣星盒板载温湿度传感器、按键、显示屏；外接风扇模块(P1)
+
+<br><br>
+
+功能：
+
+屏幕显示当前环境温度和设定阈值。
+
+当温度超过阈值时，风扇转动；否则，停止。
+
+上、下按键分别控制加、减温度阈值。
+
+<a href="/tutorial/starbox_yj/sb3/03/模拟空调控制室温过程.sb3">点击下载程序: 模拟空调控制室温过程.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+① 板载温湿度传感器读取数据为小数，为优化显示效果，做向下取整处理，例如25.3567 -> 25。
+
+<img src="/images/03/模拟空调控制室温过程.png">
