--- a/docs/第二单元_控制与系统基础/温度控制风扇.md
+++ b/docs/第二单元_控制与系统基础/温度控制风扇.md
@@ -1,1 +1,36 @@
-# 温度控制风扇
+# 《温度控制风扇*》
+
+> 🧰  创趣星盒板载旋钮和显示屏；外接风扇模块（P1）
+
+<br><br>
+
+[[toc]]
+
+## 1） 温控风扇-给定阈值
+
+**功能：屏幕实时显示当前温度数值。当温度高于给定阈值时，风扇开启；反之，关闭。**
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+<a href="/tutorial/starbox_sj/sb3/【小学】温控风扇-给定阈值.sb3">点击下载程序: 【小学】温控风扇-给定阈值.sb3</a>
+
+可以利用屏显的实时温度，决定阈值大小的选取。
+
+<img src="/images/docimg/【小学】温控风扇-给定阈值.png" >
+
+<br>
+<br>
+<br>
+
+## 2） 温控风扇-可变阈值
+
+**功能：转动旋钮调整温度阈值，温控风扇根据调节的阈值大小自动工作。**
+
+<a href="/tutorial/starbox_sj/sb3/【小学】温控风扇-可变阈值.sb3">点击下载程序: 【小学】温控风扇-可变阈值.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+实际测试中，改变环境温度操作难度较大；变相地，可以在环境温度不变的基础上，改变阈值大小已到达实验效果。示例程序选取的可调阈值区间为20-35℃。
+
+<img src="/images/docimg/【小学】温控风扇-可变阈值.png" >
+
