--- a/docs/第一单元_基本输入与输出/会唱歌的机器人.md
+++ b/docs/第一单元_基本输入与输出/会唱歌的机器人.md
@@ -1,1 +1,13 @@
-# 会唱歌的机器人
+# 《会唱歌的机器人》
+
+> 🧰 创趣星盒板载无源蜂鸣器、按键。
+
+<br><br>
+
+功能：播放旋律。左键按下时，播放旋律。
+
+<a href="/tutorial/starbox_yj/sb3/04/播放旋律.sb3">点击下载程序: 播放旋律.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+<img src="/images/04/播放旋律.png">
