--- a/docs/第一单元_基本输入与输出/开关量的真与假.md
+++ b/docs/第一单元_基本输入与输出/开关量的真与假.md
@@ -1,13 +1,14 @@
 # 《开关量的真与假》
 
-
 > 🧰 创趣星盒板载LED灯、按键。
+
+[[toc]]
 
 <br><br>
 
 ## (1) 按钮控制小灯（非自锁）
 
-左键按下时，红灯亮；松开，红灯灭。右键松开时，绿灯亮；松开，绿灯灭。
+功能：左键按下时，红灯亮；松开，红灯灭。右键松开时，绿灯亮；松开，绿灯灭。
 
 <a href="/tutorial/starbox_yj/sb3/02/两种不同方式的按键灯.sb3">点击下载程序: 两种不同方式的按键灯.sb3</a>
 
