--- a/docs/第一单元_基本输入与输出/连续变化的数据.md
+++ b/docs/第一单元_基本输入与输出/连续变化的数据.md
@@ -4,9 +4,7 @@
 
 <br><br>
 
-## 屏显声强数值并绘制图形
-
-在第一单元《输入输出与计算》的课程案例上新增图形绘制功能，动态表现声响变化的过程。
+功能： 屏显声强数值并绘制图形，动态表现声响变化的过程。
 
 <a href="/tutorial/starbox_yj/sb3/02/屏显声强数值并绘制图形.sb3">点击下载程序: 屏显声强数值并绘制图形.sb3</a>
 
