--- a/docs/第三单元_反馈与优化/智控电子秤.md
+++ b/docs/第三单元_反馈与优化/智控电子秤.md
@@ -1,1 +1,67 @@
-# 智控电子秤
+# 《智控电子秤》
+
+> 🧰  创趣星盒板载按键和显示屏；外接称重传感器（P7）
+
+<br><br>
+
+[[toc]]
+
+## 1） 称重传感器的使用
+
+**功能：测量物体重量并在主控板载屏幕上显示，量程0-1000 g 。**
+
+<a href="/tutorial/starbox_sj/sb3/【小学】称重传感器的使用.sb3">点击下载程序: 【小学】称重传感器的使用.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+由于不同称重模块的硬件参数及案例模型搭建存在差异，初次使用，为确保称重读数准确性，需先进行校正。
+
+可将示例程序分别执行3次，以获取`零漂`、`比例`、`目标待测物体重量`。
+
+<img src="/images/docimg/【小学】称重传感器的使用.png">
+
+步骤说明：
+
+（1）第一次运行时，不放置称重物体，称重平台空载。此时，待屏显数值稳定，修改程序中变量`零漂`为该值，重新上传。
+
+（2）第二次运行时，选取一件重量已知的物体（注：建议重量小于100 g，较重物体可能会造成因结构变化而产生的误差）进行称重。待屏显数值稳定，将`已知重量/屏显重量`的计算结果设为变量`比例`的值，重新上传。
+
+参考物体（作已知重量）：
+
+<img src="/images/docimg/参考物体重量.png">
+
+（3）第三次运行，对目标待测物体进行称重，读数即为最终测量结果。
+
+<br><br>
+
+## 2） 去皮功能实现
+
+**功能：可测得物体去除承载其容器后的净重。**
+
+<a href="/tutorial/starbox_sj/sb3/【小学】去皮功能实现.sb3">点击下载程序：【小学】去皮功能实现.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+参数`零漂`和`比例`需根据实际情况进行调整。变量`皮重`即为承载物体的容器重量，默认无容器直接测量，故初始值为0。
+
+若需进行去皮测量，可先将容器放置于称重平台，待屏显数值稳定后，按下左键，程序自动记录该值为`皮重`；后续再将待测物体放置于容器时，屏显数值便是物体`净重`(= 当前重量 - 皮重)了。
+
+① 考虑到皮重测量可能存在误差，以致于净重的计算结果产生负值。优化演示效果，负值统一作0处理。
+
+<img src="/images/docimg/【小学】去皮功能实现.png" >
+
+
+<br>
+
+## 3） 累加功能实现
+
+**功能：分批次测量，累计多个物体重量总和。**
+
+<a href="/tutorial/starbox_sj/sb3/【小学】累加功能实现.sb3">点击下载程序：【小学】累加功能实现.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+参数`零漂`和`比例`需根据实际情况进行调整。每按一次左键，`总重`都会累加一次`当前重量`；按右键，`总重`清零重置。
+
+<img src="/images/docimg/【小学】累加功能实现.png" >
+
