--- a/docs/第二单元_控制与系统基础/光照温度要适宜.md
+++ b/docs/第二单元_控制与系统基础/光照温度要适宜.md
@@ -1,1 +1,41 @@
-# 光照温度要适宜
+# 《光照温度要适宜》
+
+> 🧰 创趣星盒板载LED灯、光线传感器、温湿度传感器、旋钮和显示屏。
+
+<br><br>
+
+
+功能：
+
+屏幕显示信息；
+
+当检测光强小于光线阈值时，补光灯打开；反之，关闭；
+
+当检测温度小于温度阈值时，暖风扇（文字示意）打开；反之，关闭；
+
+左键按下的同时，转动旋钮可调节光线阈值；右键按下的同时，转动旋钮可调节温度阈值。
+
+<a href="/tutorial/starbox_yj/sb3/05/自动光控温控系统.sb3">点击下载程序: 自动光控温控系统.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+① 板载温湿度传感器返回值为小数，为优化显示效果，做取整处理；
+
+② 按下相应按键的同时，转动旋钮可分别控制光线或温度阈值（*注意：调节时，不要同时按下左右键，按下后不要松开，调节完毕后再松开按键*）
+
+③ 光线检测和旋钮的返回值均为模拟值，范围均为0-1023
+
+④ 温度返回值单位为摄氏度℃，此语句意在将旋钮返回值0-1023映射至0-30（℃）
+
+<img src="/images/05/自动光控温控系统1.png">
+
+<img src="/images/05/自动光控温控系统2.png">
+
+
+
+
+
+
+
+
+
