--- a/docs/第二单元_控制与系统基础/自动读秒交通灯.md
+++ b/docs/第二单元_控制与系统基础/自动读秒交通灯.md
@@ -1,1 +1,27 @@
-# 自动读秒交通灯
+# 《自动读秒交通灯》
+
+> 🧰 创趣星盒板载LED灯、按键、显示屏
+
+<br><br>
+
+## 基础：三种颜色的板载灯每隔一段时间自动切换，循环往复
+
+<a href="/tutorial/starbox_yj/sb3/01/自动读秒交通灯（基础）.sb3">点击下载程序: 自动读秒交通灯（基础）.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+<img src="/images/01/自动读秒交通灯（基础）.png">
+
+## 进阶：增加屏显倒计时秒数功能
+
+<a href="/tutorial/starbox_yj/sb3/01/自动读秒交通灯（进阶）.sb3">点击下载程序: 自动读秒交通灯（进阶）.sb3</a>
+
+<img src="/images/01/自动读秒交通灯（进阶）1.png">
+
+<br>
+
+① 此行脚本意义是用屏幕的填充色覆盖之前显示的两位数字，将字色填充色均设置为白色；因为最多显示的是两位数，所以这里可以填写≥2个数字做覆盖清屏处理。
+
+*注意：不能填“00”，因为任意长度的数字0000...均会当作数字0处理*
+
+<img src="/images/01/自动读秒交通灯（进阶）2.png">
