--- a/docs/第三单元_反馈与优化/智控电子秤.md
+++ b/docs/第三单元_反馈与优化/智控电子秤.md
@@ -10,7 +10,7 @@
 
 **功能：测量物体重量并在主控板载屏幕上显示，量程0-1000 g 。**
 
-<a href="/tutorial/starbox_sj/sb3/【小学】称重传感器的使用.sb3">点击下载程序: 【小学】称重传感器的使用.sb3</a>
+<a href="/tutorial/starbox_sj/sb3/称重传感器的使用.sb3">点击下载程序: 称重传感器的使用.sb3</a>
 
 <a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
 
@@ -38,7 +38,7 @@
 
 **功能：可测得物体去除承载其容器后的净重。**
 
-<a href="/tutorial/starbox_sj/sb3/【小学】去皮功能实现.sb3">点击下载程序：【小学】去皮功能实现.sb3</a>
+<a href="/tutorial/starbox_sj/sb3/去皮功能实现.sb3">点击下载程序：去皮功能实现.sb3</a>
 
 <a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
 
@@ -57,7 +57,7 @@
 
 **功能：分批次测量，累计多个物体重量总和。**
 
-<a href="/tutorial/starbox_sj/sb3/【小学】累加功能实现.sb3">点击下载程序：【小学】累加功能实现.sb3</a>
+<a href="/tutorial/starbox_sj/sb3/累加功能实现.sb3">点击下载程序：累加功能实现.sb3</a>
 
 <a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
 
