--- a/docs/第五单元_综合场景与应用/刷卡开锁易实现.md
+++ b/docs/第五单元_综合场景与应用/刷卡开锁易实现.md
@@ -1,1 +1,20 @@
-# 刷卡开锁易实现
+# 《刷卡开锁易实现*》
+
+> 🧰 实验器材
+
+创趣星盒板载RFID传感器和显示屏；外接舵机(P1)。
+
+<br><br>
+
+功能：门禁系统识别到许可编号时，舵机带动门闸打开，短暂时间后，自动关闭。
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+
+<a href="/tutorial/starbox_yj/sb3/13/刷卡门禁.sb3">点击下载程序: 刷卡门禁.sb3</a>
+
+① 将许可的编号依次加入列表
+
+② 舵机旋转角度与舵盘安装位置相关，请根据实际情况分别调整闭合/打开时角度
+
+<img src="/images/13/刷卡门禁.png">
