--- a/docs/第六单元_通讯与网络基础/巧用蓝牙做工具.md
+++ b/docs/第六单元_通讯与网络基础/巧用蓝牙做工具.md
@@ -1,1 +1,22 @@
-# 巧用蓝牙做工具
+# 《巧用蓝牙做工具》
+
+> 🧰 创趣星盒板载WIFI-BLE模块、加速度计、按键和显示屏。
+
+<br><br>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+<p class="attention">注意：本案列需配合软件——<a href="https://www.cfunworld.com">点击下载：蓝牙遥控映射助手</a>使用</p>
+
+<img src="/images/12/蓝牙遥控映射助手.png">
+
+
+<a href="/tutorial/starbox_yj/sb3/12/蓝牙翻页笔.sb3">点击下载程序: 蓝牙翻页笔.sb3</a>
+
+① 变量`标志`的作用是，避免重复多次执行翻页操作；星盒下倾或上倾进行翻页操作后，必须会正才能执行下次翻页操作
+
+② 倾斜时，发送对应蓝牙语句，并改变标志量；蓝牙遥控映射助手软件根据接收到的语句执行自定义键鼠行为
+
+③ 回正时，重置标志量
+
+<img src="/images/12/蓝牙翻页笔.png">
