--- a/docs/第六单元_通讯与网络基础/探究蓝牙传输距离.md
+++ b/docs/第六单元_通讯与网络基础/探究蓝牙传输距离.md
@@ -1,1 +1,27 @@
-# 第六单元 通讯与网络基础
+# 《探究蓝牙传输距离》
+
+> 🧰  创趣星盒板载WIFI-BLE模块和显示屏（需小组合作，每组2个创趣星盒）
+
+[[toc]]
+
+<br>
+<br>
+
+<span class="attention">由于实验程序初始化阶段主机会连接从机，所以需先启动从机，再启动主机。</span>
+
+成功连接后，从机每隔1秒向主机发送递增数值，主机接收后在屏幕显示。
+
+<a href="/tutorial/starbox_sj/sb3/探究蓝牙传输距离.sb3">点击下载程序：探究蓝牙传输距离.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+<img src="/images/docimg/【初中】蓝牙传输-从机.png">
+
+<img src="/images/docimg/Snipaste_2025-03-18_11-32-22.png">
+
+改变主从机的间隔距离，根据其连接及收发数据情况，探究当前设备的可靠传输距离。
+
+<a href="/tutorial/starbox_sj/others/探究蓝牙传输距离.xlsx">点击下载表格：探究蓝牙传输距离.xlsx</a>
+
+<img src="/images/docimg/Snipaste_2025-03-18_11-44-00.png">
+
