--- a/docs/第四单元_机器人与汽车应用/不同参数对运动的影响.md
+++ b/docs/第四单元_机器人与汽车应用/不同参数对运动的影响.md
@@ -1,1 +1,37 @@
-# 不同参数对运动的影响
+# 《不同参数对运动的影响》
+
+> 🧰 创趣星盒（车形态）
+
+<br><br>
+
+## 基础
+
+程序中给定速度进行测试。按下“上键”，机器人前进一段时间后停止。
+
+<a href="/tutorial/starbox_yj/sb3/01/不同参数控制机器人前进（基础）.sb3">点击下载程序: 不同参数控制机器人前进（基础）.sb3</a>
+
+① 设置“上键”按下后再启动机器，以便控制
+
+<img src="/images/01/不同参数控制机器人前进（基础）.png">
+
+<br>
+<br>
+<br>
+
+## 进阶
+
+通过板载按键动态调整速度。左键——左速度增加；右键——右速度增加；下键——速度重置；上键——启动机器人
+
+<a href="/tutorial/starbox_yj/sb3/01/不同参数控制机器人前进（进阶）.sb3">点击下载程序: 不同参数控制机器人前进（进阶）.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+① 机器人直到“上键”被按下时才启动，在这之前持续检测其余按键状态，并对速度做出相应调整
+
+<img src="/images/01/不同参数控制机器人前进（进阶）1.png">
+
+② 延时起到按键防抖作用，防止多次检测到按下动作（也就是在给定的0.5秒内完成按下->松开按键动作，就只会被检测到一次）
+
+③ 电机最大速度为100，边界值保护
+
+<img src="/images/01/不同参数控制机器人前进（进阶）2.png">
