--- a/docs/第四单元_机器人与汽车应用/安全带未系提醒.md
+++ b/docs/第四单元_机器人与汽车应用/安全带未系提醒.md
@@ -1,1 +1,19 @@
-# 安全带未系提醒
+# 《安全带未系提醒*》
+
+> 🧰 创趣星盒板载按键、无源蜂鸣器和显示屏，外接称重传感器。
+
+功能：
+
+用称重传感器模拟汽车座椅的压力系统，左键按下/松开分别表示安全带的系上/松开状态；
+
+称重传感器检测数值超过阈值且按钮松开时，蜂鸣器发出警报。
+
+<a href="/tutorial/starbox_yj/sb3/07/安全带未系提醒.sb3">点击下载程序: 安全带未系提醒.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+① 选取500g作为判断座位上是否有人的边界值；
+
+② 按钮松开时，表示安全带未系
+
+<img src="/images/07/安全带未系提醒.png">
