--- a/docs/第四单元_机器人与汽车应用/定速巡航的控制.md
+++ b/docs/第四单元_机器人与汽车应用/定速巡航的控制.md
@@ -1,1 +1,17 @@
-# 定速巡航的控制
+# 《定速巡航的控制》
+
+> 🧰 创趣星盒板（车形态）载超声波测距传感器、电机和显示屏。
+
+功能：根据前车距离，机器人动态调整车速；当前方足够开阔时，机器人以定速前进。
+
+<a href="/tutorial/starbox_yj/sb3/07/定速巡航的控制.sb3">点击下载程序: 定速巡航的控制.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+① 车速（电机）最大设置值为100，建立`车速`与`检测距离`之间的联系，系数可根据实际情况自行调整；
+
+② 前方足够开阔时，车速达到最大值100并保持；
+
+③ 此模块时间设置为0时，为执行单次循迹纠正动作的逻辑（循迹教程可参考《第三单元 从人工到自动化》）
+
+<img src="/images/07/定速巡航的控制.png">
