--- a/docs/第四单元_机器人与汽车应用/循线机器人.md
+++ b/docs/第四单元_机器人与汽车应用/循线机器人.md
@@ -1,1 +1,24 @@
-# 循线机器人
+# 《循线机器人》
+
+> 🧰 创趣星盒（车形态）板载灰度传感器、电机。
+
+<br>
+<br>
+
+功能：按上键，小车自动沿着地图黑线行驶
+
+<a href="/tutorial/starbox_sj/sb3/循线机器人.sb3">点击下载程序: 循线机器人.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+车头底部中央板载了2个灰度传感器，探头朝下，用于检测地面灰度值大小。
+
+小车行进过程中，任一灰度传感器偏离黑线边进行纠正。
+
+<img src="/images/docimg/【小学】循线小车原理.png">
+
+① 上键按下后才启动，以方便控制
+
+② 因循线逻辑较为复杂，创趣星盒已做相关逻辑的封装，以便快速体验；②标注积木为执行单次循迹纠正动作的脚本（速度0-100，时间0）
+
+<img src="/images/docimg/【小学】循线小车.png">
