--- a/docs/第四单元_机器人与汽车应用/方形路径的行驶.md
+++ b/docs/第四单元_机器人与汽车应用/方形路径的行驶.md
@@ -1,1 +1,15 @@
-# 第四单元 机器人与汽车应用
+# 《方形路径的行驶》
+
+> 🧰 创趣星盒（车形态）板载电机。
+
+<br><br>
+
+功能：上键按下时，机器人启动。
+
+<a href="/tutorial/starbox_yj/sb3/03/沿正方形路径行驶.sb3">点击下载程序: 沿正方形路径行驶.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+① 标注积木设置左/右转时，两电机速度相同，方向相反；调节速度、时间，决定其转弯角度大小。
+
+<img src="/images/03/沿正方形路径行驶.png">
