--- a/docs/第四单元_机器人与汽车应用/沿墙行走机器人.md
+++ b/docs/第四单元_机器人与汽车应用/沿墙行走机器人.md
@@ -1,1 +1,68 @@
-# 沿墙行走机器人
+# 《沿墙行走机器人》
+
+> 🧰  创趣星盒(车形态)板载电机；外接红外避障传感器（P1、P2）
+
+[[toc]]
+
+<br>
+<br>
+
+
+## 1） 【在线】红外避障传感器测试
+
+1 将两个避障传感器连接到机器人侧面。
+
+2 转动传感器上“一”字槽电位器，调节灵敏度，以选择合适的避障距离。
+
+<img src="/images/docimg/微信图片_20250219100619.png">
+
+<img src="/images/docimg/微信图片_20250219100616.png">
+
+3 在线模式下运行，读值为0（无障碍物）/ 1（有障碍物）。
+
+<img src="/images/docimg/【小学】【在线】红外避障传感器测试.png">
+
+<br>
+<br>
+
+## 2） 沿墙行驶功能实现（基础）
+
+<a href="/tutorial/hellocardoc/sb3/沿墙行驶功能实现（基础）.sb3">点击下载程序：沿墙行驶功能实现（基础）.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+机器人在两侧墙壁（类隧道）中行驶，
+
+- 当其左偏，仅左侧红外避障（P1）检测到障碍物时，向右纠正；
+
+- 当其右偏，仅右侧红外避障（P2）检测到障碍物时，向左纠正；
+
+- 当其居中，左右同时检测到或同时未检测到障碍物时，直行向前。
+
+<img src="/images/docimg/【小学】沿墙行驶功能实现（基础）.png">
+
+<br>
+<br>
+
+## 3） 沿墙行驶功能实现（优化）
+
+可以创建一个变量，用于接收两个红外避障的读值，以增加程序的可读性；
+
+<img src="/images/docimg/【小学】沿墙行驶功能实现（优化）1.png">
+
+这样，可得如下关系表：
+
+<img src="/images/docimg/Snipaste_2025-02-19_10-48-20.png">
+
+程序优化后，得：
+
+<a href="/tutorial/hellocardoc/sb3/沿墙行驶功能实现（优化）.sb3">点击下载程序：沿墙行驶功能实现（优化）.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+<img src="/images/docimg/【小学】沿墙行驶功能实现（优化）2.png">
+
+
+<br>
+<br>
+
