--- a/docs/第四单元_机器人与汽车应用/跟随机器人.md
+++ b/docs/第四单元_机器人与汽车应用/跟随机器人.md
@@ -1,1 +1,13 @@
-# 跟随机器人
+# 《跟随机器人》
+
+> 🧰  创趣星盒(车形态)板载超声波测距传感器和电机
+
+<a href="/tutorial/hellocardoc/sb3/跟随机器人.sb3">点击下载程序：跟随机器人.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+机器人远离目标对象超过40cm时，自动向前行进，直至距离小于20cm时，停止运动。
+
+<img src="/images/docimg/gensui.png">
+
+<img src="/images/docimg/【小学】跟随机器人.png">
