--- a/docs/第二单元_控制与系统基础/自动读秒交通灯.md
+++ b/docs/第二单元_控制与系统基础/自动读秒交通灯.md
@@ -4,7 +4,9 @@
 
 <br><br>
 
-## 基础：三种颜色的板载灯每隔一段时间自动切换，循环往复
+## 基础
+
+三种颜色的板载灯每隔一段时间自动切换，循环往复
 
 <a href="/tutorial/starbox_collection/sb3/01/自动读秒交通灯（基础）.sb3">点击下载程序: 自动读秒交通灯（基础）.sb3</a>
 
@@ -12,7 +14,12 @@
 
 <img src="/images/01/自动读秒交通灯（基础）.png">
 
-## 进阶：增加屏显倒计时秒数功能
+<br>
+<br>
+
+## 进阶
+
+增加屏显倒计时秒数功能
 
 <a href="/tutorial/starbox_collection/sb3/01/自动读秒交通灯（进阶）.sb3">点击下载程序: 自动读秒交通灯（进阶）.sb3</a>
 
