--- a/docs/第五单元_综合场景与应用/到达指定的楼层.md
+++ b/docs/第五单元_综合场景与应用/到达指定的楼层.md
@@ -1,1 +1,24 @@
-# 到达指定的楼层
+# 《到达指定的楼层》
+
+> 🧰 创趣星盒板载RFID射频传感器、按键、显示屏、LED灯和无源蜂鸣器。
+
+<br><br>
+
+
+功能：通过RFID身份卡的验证，判定是否允许使用电梯；身份通过的情况下，可通过左、上、右按键分别控制电梯到达1F、2F、3F楼层。
+
+<a href="/tutorial/starbox_yj/sb3/06/控制电梯到达指定楼层.sb3">点击下载程序: 控制电梯到达指定楼层.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+① 用时间戳的形式记录刷卡通过瞬间的时间节点；
+
+② 在刷卡通过3的秒内，可通过按键控制电梯运行，用这种形式书写，而不是延时，能有效地避免程序地阻塞；
+
+③ 使用字符串连接积木，旨在将输入的汉字作为字符串处理，而不会被程序误当作变量名称。
+
+<img src="/images/06/控制电梯到达指定楼层1.png">
+
+<img src="/images/06/控制电梯到达指定楼层2.png">
+
+<img src="/images/06/控制电梯到达指定楼层3.png">
