--- a/docs/第五单元_综合场景与应用/电梯门的开与关.md
+++ b/docs/第五单元_综合场景与应用/电梯门的开与关.md
@@ -1,1 +1,32 @@
-# 电梯门的开与关
+# 《电梯门的开与关》
+
+> 🧰 创趣星盒板载按键、显示屏、LED灯和无源蜂鸣器。
+
+<br><br>
+
+
+功能：上、下按键分别表示2楼和1楼，楼层按键控制电梯上下运行；左、右按键分别表示开、关门键；
+
+<a href="/tutorial/starbox_yj/sb3/06/模拟电梯门的开关.sb3">点击下载程序: 模拟电梯门的开关.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+① 电梯停靠在1楼时，只有控制前往2楼的逻辑生效；停靠在2楼时，只有控制前往1楼的逻辑生效
+
+<img src="/images/06/模拟电梯门的开关1.png">
+
+② 电梯门运行流程：
+
+到达指定楼层后，打开 - 未超过最大打开时长时，侦测开关门按键状态并做出相应调整 - 关闭 
+
+③ 开门键（左键）按下时，重置当前已打开时间，再进行一轮新的等待
+
+④ 关门键（右键）按下时，减小最大允许打开时长
+
+<img src="/images/06/模拟电梯门的开关2.png">
+
+⑤ 与先前楼层比较，设定为当前实际楼层
+
+<img src="/images/06/模拟电梯门的开关3.png">
+
+
