--- a/docs/第六单元_通讯与网络基础/获取网络时间和天气.md
+++ b/docs/第六单元_通讯与网络基础/获取网络时间和天气.md
@@ -1,1 +1,14 @@
-# 获取网络时间和天气
+# 《获取网络时间和天气》
+
+> 🧰 创趣星盒板载WIFI-BLE模块和显示屏。
+
+<br><br>
+
+
+功能：创趣星盒接入互联网，每隔10秒向服务器请求一次时间和天气，屏显数据。
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+<a href="/tutorial/starbox_yj/sb3/12/获取网络时间和天气.sb3">点击下载程序: 获取网络时间和天气.sb3</a>
+
+<img src="/images/12/获取网络时间和天气.png">
