--- a/docs/第四单元_机器人与汽车应用/倒车防撞请注意.md
+++ b/docs/第四单元_机器人与汽车应用/倒车防撞请注意.md
@@ -1,1 +1,16 @@
-# 倒车防撞请注意
+# 《倒车防撞请注意》
+
+> 🧰 创趣星盒板载超声波测距传感器、无源蜂鸣器和显示屏。
+
+<br>
+<br>
+
+功能：根据超声波测距传感器距离障碍物的远近，发出警报声； 距离越近，警报越急促。
+
+<a href="/tutorial/starbox_yj/sb3/07/倒车防撞请注意.sb3">点击下载程序: 倒车防撞请注意.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+① 600仅作参考，可根据实际情况自行调整，这里的作用是为了建立`间隔(秒)`与`检测距离(厘米)`之间的联系
+
+<img src="/images/07/倒车防撞请注意.png">
