--- a/docs/第七单元_物联网系统设计/可远程控制门禁.md
+++ b/docs/第七单元_物联网系统设计/可远程控制门禁.md
@@ -1,1 +1,19 @@
-# 可远程控制门禁
+# 《可远程控制门禁*》
+
+> 🧰 创趣星盒板载WIFI-BLE模块，RFID传感器、LED灯和显示屏；外接舵机（P1）。
+
+<br><br>
+
+功能：保留刷卡门禁功能的基础上，增加网络远程控制功能。当远程向对应主题发布"open"消息时，门禁打开，若干秒后自动关闭。
+
+<a href="/tutorial/starbox_collection/sb3/13/可远程控制门禁.sb3">点击下载程序: 可远程控制门禁.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+<img src="/images/13/可远程控制门禁1.png">
+
+① 板载灯的亮灭做联网过程提示作用
+
+② 订阅相关主题，后续侦测该主题消息，以实现远程可控
+
+<img src="/images/13/可远程控制门禁2.png">
