--- a/docs/第七单元_物联网系统设计/场馆的人数控制.md
+++ b/docs/第七单元_物联网系统设计/场馆的人数控制.md
@@ -1,1 +1,59 @@
-# 场馆的人数控制
+# 《场馆的人数控制*》
+
+> 🧰  创趣星盒板载WIFI-BLE模块、LED灯和显示屏；外接舵机(P1)和红外避障传感器*2(P2、P3)
+
+
+[[toc]]
+
+<br>
+<br>
+
+<span class="attention">注：实验网络应为2.4G, 手机热点请切换至4G。</span>
+
+
+
+## 1）舵机的运用
+
+本案例中使用的舵机活动范围为0-270°
+
+<img src="/images/docimg/Snipaste_2025-03-07_09-52-25.png">
+
+舵机旋转的绝对角度取决于舵杆与舵盘的装配位置。如运行效果不佳，可将舵盘拆卸，通过程序将舵杆转至合适角度后，再安装。
+
+<br>
+<br>
+
+## 2）人数控制
+
+发挥一下想象力，我们阅览室的布局大致是这样 ↓↓↓左侧为入口由舵机自动控制门闸；右侧为出口，需要手动抬杆
+
+<img src="/images/docimg/Snipaste_2025-07-01_11-33-38.png">
+
+<img src="/images/docimg/Snipaste_2025-07-01_11-36-10.png">
+
+<a href="/tutorial/starbox_collection/sb3/人数控制.sb3">点击下载程序：人数控制.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+- 当阅览室入口处红外传感器1检测到有人进入时，舵机开闸，短暂延时后关闭，人数加1；
+
+- 当出口处红外传感器2检测到有人离开时，为防止重复检测，短暂延时后，人数减1。
+
+*注意：正常情况，如果访客都遵循进出路线的规则，不会出现人数为负的情况。*
+
+<img src="/images/docimg/Snipaste_2025-03-07_10-40-54.png">
+
+<br>
+<br>
+
+## 3）人数控制并上传至平台
+
+<a href="/tutorial/starbox_collection/sb3/人数控制并上传至平台.sb3">点击下载程序：人数控制并上传至平台.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+在原有功能基础上，增加远程物联网平台的监控功能。
+
+<img src="/images/docimg/Snipaste_2025-03-07_11-11-45.png">
+
+<img src="/images/docimg/Snipaste_2025-03-07_11-12-51.png">
