--- a/docs/第七单元_物联网系统设计/场馆的温湿度控制.md
+++ b/docs/第七单元_物联网系统设计/场馆的温湿度控制.md
@@ -1,1 +1,54 @@
-# 场馆的温湿度控制
+# 《场馆的温湿度控制*》
+
+> 🧰  创趣星盒板载WIFI-BLE模块、温湿度检测传感器、LED灯和显示屏；外接风扇(P1)
+
+
+[[toc]]
+
+<br>
+<br>
+
+<span class="attention">注：实验网络应为2.4G, 手机热点请切换至4G。</span>
+
+
+## 1）温湿度测试
+
+<a href="/tutorial/starbox_collection/sb3/温湿度测试.sb3">点击下载程序：温湿度测试.sb3</a>
+
+屏显温度（℃）和湿度（%）读值。
+
+<img src="/images/docimg/Snipaste_2025-03-07_15-06-43.png">
+
+<br>
+<br>
+
+## 2）智控风扇
+
+<a href="/tutorial/starbox_collection/sb3/智控风扇.sb3">点击下载程序：智控风扇.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+当温度或湿度大于阈值时打开风扇，模拟降温和除湿。
+
+*注意：为方便演示，可适当调整阈值。*
+
+<img src="/images/docimg/Snipaste_2025-03-07_15-15-03.png">
+
+<br>
+<br>
+
+## 3）智控风扇并上传至平台
+
+<a href="/tutorial/starbox_collection/sb3/智控风扇并上传至平台.sb3">点击下载程序：智控风扇并上传至平台.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+在原有功能基础上，增加远程物联网平台的监控功能。
+
+<img src="/images/docimg/Snipaste_2025-03-07_15-34-21.png">
+
+<img src="/images/docimg/Snipaste_2025-07-01_12-22-06.png">
+
+可以利用Web平台的图表功能，更直观地展示数据
+
+<img src="/images/docimg/Snipaste_2025-03-07_15-31-13.png">
