--- a/docs/第七单元_物联网系统设计/模拟本地单灯系统.md
+++ b/docs/第七单元_物联网系统设计/模拟本地单灯系统.md
@@ -1,1 +1,36 @@
-# 第七单元 物联网系统设计
+# 《模拟本地单灯系统》
+
+> 🧰  创趣星盒板载LED灯、光线检测传感器和显示屏
+
+
+[[toc]]
+
+<br>
+<br>
+
+## 1）屏显光照强度
+
+实时屏显光强数值，模拟值无单位，理论读值范围0-1023；光线越暗，读值越小。
+
+分别记录光线检测有无遮挡时数值，选取合适阈值以模拟亮暗环境。
+
+<a href="/tutorial/starbox_collection/sb3/屏显光照强度.sb3">点击下载程序：屏显光照强度.sb3</a>
+
+<img src="/images/docimg/【初中】屏显光照强度.png">
+
+<br>
+<br>
+
+## 2）模拟本地单灯控制
+
+<a href="/tutorial/starbox_collection/sb3/模拟本地单灯控制.sb3">点击下载程序：模拟本地单灯控制.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+环境光照强度小于给定阈值时，灯亮；反之, 灭。
+
+<img src="/images/docimg/【初中】模拟本地单灯控制.png">
+
+<br>
+<br>
+
