--- a/docs/第七单元_物联网系统设计/模拟远程单灯系统.md
+++ b/docs/第七单元_物联网系统设计/模拟远程单灯系统.md
@@ -1,1 +1,102 @@
-# 模拟远程单灯系统
+# 《模拟远程单灯系统》
+
+> 🧰  创趣星盒板载LED灯、光线检测传感器、WIFI-BLE模块和显示屏
+
+
+[[toc]]
+
+<br>
+<br>
+
+<span class="attention">注：实验网络应为2.4G, 手机热点请切换至4G。</span>
+
+
+## 1）物联网平台注册登录
+
+- 注册
+
+浏览器访问 <a href="https://iot.cfunworld.com">https://iot.cfunworld.com</a>（推荐谷歌浏览器，不支持低版本IE）
+
+<img src="/images/docimg/Snipaste_2025-03-05_10-33-28.png">
+
+填写信息，邮箱接收验证码并输入，完成注册。
+
+<img src="/images/docimg/Snipaste_2025-03-05_10-40-24.png">
+
+- 登录
+
+输入邮箱和密码，点击登录
+
+<img src="/images/docimg/Snipaste_2025-03-05_10-42-30.png">
+
+<br>
+<br>
+
+## 2）设备接入物联网
+
+- 连接wifi
+
+同常见的联网设备一样，需要选择可用的无线网络进行连接。待连接成功后，主控板载屏幕显示“wifi ok”
+
+<img src="/images/docimg/Snipaste_2025-03-05_10-51-39.png">
+
+- 连接物联网
+
+连接创趣物联网平台。在已完成注册登录的基础上，可在web端设备信息页面获取`用户名`、`设备ID`、`设备码`等信息。创趣物联网服务端TCP地址为 `iot.cfunworld.com`，端口号为`1883`。待硬件设备连接成功后，主控板载屏幕显示“iot ok”
+
+<img src="/images/docimg/Snipaste_2025-03-05_10-53-22.png">
+
+<img src="/images/docimg/Snipaste_2025-03-05_10-56-05.png">
+
+<br>
+<br>
+
+## 3）模拟远程单灯控制
+
+<a href="/tutorial/starbox_collection/sb3/模拟远程单灯控制.sb3">点击下载程序：模拟远程单灯控制.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+【物联网Web平台-控制界面】
+
+> 功能介绍：(Web平台的默认发布行为)
+
+> 发送会话 - 主题：CmsgW ; 用于发送字符串信息，受接收端限制，安全字符为英文、数字、下划线
+
+> 按钮 - 主题：Cbtn ; 虚拟按钮按下时，发送数值1信息；否则，发送0
+
+> 滑杆 - 主题: Cran ; 虚拟滑杆取值范围0-100， 滑动发送停留位置数值大小
+
+*注意：发送动作频率最小为2s(以按钮为例, 每次点击间隔需大于2s), 智能硬件接收存在延迟为正常现象*
+
+<img src="/images/docimg/Snipaste_2025-03-05_11-43-11.png">
+
+<br>
+<br>
+
+【Web平台-数据监控】
+
+> 功能介绍：(Web平台的默认订阅行为)
+
+> 会话监听 - 主题：Cmsg ; 开启后，用于监听字符串信息
+
+> 数值监听(数据A-D) - 主题：Cnum1 ; 开启后， 用于监听数值信息
+
+> 数值监听(数据E-H) - 主题：Cnum2 ; 开启后， 用于监听数值信息
+
+*注意：所有监听动作及图表重绘频率均为2s, 页面显示存在延迟为正常现象*
+
+<img src="/images/docimg/Snipaste_2025-03-05_11-47-39.png">
+
+创趣星盒联网后，
+
+订阅主题Cbtn，监听Web平台通过操作虚拟按钮发送过来地开关指令; 
+
+并持续向主题Cnum1发送实时监测到的光线信息至Web平台。
+
+操作者根据平台显示的信息远程控制设备上灯的亮灭。
+
+<img src="/images/docimg/Snipaste_2025-03-05_11-31-27.png">
+
+<br>
+<br>
