--- a/docs/第七单元_物联网系统设计/模拟远程多灯系统.md
+++ b/docs/第七单元_物联网系统设计/模拟远程多灯系统.md
@@ -1,1 +1,66 @@
-# 模拟远程多灯系统
+# 《模拟远程多灯系统》
+
+> 🧰  创趣星盒板载LED灯、光线检测传感器、WIFI-BLE模块和显示屏（需小组合作，每组2个创趣星盒）
+
+
+[[toc]]
+
+<br>
+<br>
+
+<span class="attention">注：实验网络应为2.4G, 手机热点请切换至4G。</span>
+
+
+- **Web物联网平台注册多个设备**
+
+登录平台，点击设备信息 - 管理设备，根据提示创建多个设备。
+
+⭐ 单用户默认权限，允许创建至多2个设备
+
+<img src="/images/docimg/Snipaste_2025-03-06_15-04-54.png">
+
+<img src="/images/docimg/Snipaste_2025-03-06_15-07-18.png">
+
+<br>
+<br>
+<br>
+
+- **控制逻辑**
+
+⭐ 已登录的设备，只允许发布与其相关的主题信息，但可以订阅隶属于同一用户的其他设备主题。
+
+<img src="/images/docimg/控制逻辑.png">
+
+<br>
+<br>
+<br>
+
+- **设备1**
+
+设备1检测的光线数值可在Web平台/数据监控/南京路（设备1）页面进行查看；
+
+Web平台/控制界面/南京路（设备1）页面可远程操控设备1的板载灯的亮灭。
+
+<a href="/tutorial/starbox_collection/sb3/模拟远程多灯控制-设备1.sb3">点击下载程序：模拟远程多灯控制-设备1.sb3</a>
+
+<img src="/images/docimg/【初中】模拟远程多灯控制-设备1.png">
+
+<br>
+
+- **设备2** （程序只改了设备ID编号）
+
+设备2检测的光线数值可在Web平台/数据监控/上海路（设备2）页面进行查看；
+
+Web平台/控制界面/**南京路（设备1）页面**可远程操控**设备2**的板载灯的亮灭。
+
+<a href="/tutorial/starbox_collection/sb3/模拟远程多灯控制-设备2.sb3">点击下载程序：模拟远程多灯控制-设备2.sb3</a>
+
+<img src="/images/docimg/【初中】模拟远程多灯控制-设备2.png">
+
+<br>
+<br>
+
+
+
+
+
