--- a/docs/第九单元_跨学科探索/奶牛产奶监测系统.md
+++ b/docs/第九单元_跨学科探索/奶牛产奶监测系统.md
@@ -1,1 +1,40 @@
-# 奶牛产奶监测系统
+# 《奶牛产奶监测系统》
+
+> 🧰 创趣星盒板载RFID传感器、超声波测距传感器、按键和显示屏。
+
+<br>
+<br>
+
+功能：
+
+发送端通过RFID传感器读取奶牛编号，再利用超声波测距获得桶内液面高度，按键确定发送至物联平台；
+
+接收端屏幕实时打印获取到的奶牛产奶数据。
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+<br><br>
+
+- 发送端
+
+作为设备1接入物联网服务，发送设备1主题消息；
+
+<a href="/tutorial/starbox_collection/sb3/15/奶牛产奶监测系统（发送端）.sb3">点击下载程序: 奶牛产奶监测系统（发送端）.sb3</a>
+
+① 桶深假定为40cm
+
+② 超声波测距传感器安装在桶口，探头朝向桶底；此时，`液面高度 = 桶深 - 超声波至液面的距离`
+
+③ RFID传感器在未检测到RFID卡片时，返回0；仅在检测到有效编号时，才可能发送数据至物联云端
+
+<img src="/images/15/奶牛产奶监测系统（发送端）.png">
+
+- 接收端
+
+作为设备2接入物联网服务，订阅设备1主题消息；
+
+<a href="/tutorial/starbox_collection/sb3/15/奶牛产奶监测系统（接收端）.sb3">点击下载程序: 奶牛产奶监测系统（接收端）.sb3</a>
+
+① 由`发动端`程序可知，数值A为编号，数值B为页面高度
+
+<img src="/images/15/奶牛产奶监测系统（接收端）.png">
