--- a/docs/第九单元_跨学科探索/文物存放的适宜环境探究.md
+++ b/docs/第九单元_跨学科探索/文物存放的适宜环境探究.md
@@ -1,1 +1,27 @@
-# 第八单元 跨学科探索
+# 《文物存放的适宜环境探究*》
+
+🧰 创趣星盒板载温湿度传感器、WIFI-BLE模块、无源蜂鸣器和显示屏；外接风扇（P1）。
+
+<br><br>
+
+功能：
+
+温湿度传感器实时监测环境状态，并将检测数值上报物联云端。
+
+当温度不满足给定区间时，风扇(模拟空调)启动；当湿度不满足给定区间时，屏显文字显示“加湿器：打开”。
+
+任意设备启动时长超过给定时间时，蜂鸣器发出警报。
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+<a href="/tutorial/starbox_collection/sb3/15/博物馆环境监测系统.sb3">点击下载程序: 博物馆环境监测系统.sb3</a>
+
+① 变量`t1`、`t2`分别用来作为空调启动和加湿器启动时的时间戳
+
+<img src="/images/15/博物馆环境监测系统1.png">
+
+② 未满足设备启动条件时，及时更新时间戳
+
+③ 任意设备启动时长超过给定时长时，发起警报
+
+<img src="/images/15/博物馆环境监测系统2.png">
