--- a/docs/第九单元_跨学科探索/热水的降温规律.md
+++ b/docs/第九单元_跨学科探索/热水的降温规律.md
@@ -1,1 +1,27 @@
-# 热水的降温规律
+# 《热水的降温规律*》
+
+> 🧰 创趣星盒板WIFI-BLE模块和显示屏；外接水温传感器*4（P1、P2、P3、P7）。
+
+<p class="attention">注：实验网络应为2.4G, 手机热点请切换至4G。</p>
+
+[[toc]]
+<br><br>
+
+
+功能：将4个水温传感器分别放入4种装有热水（≥80℃）的容器内；当温度=80℃时，开始记录降温时长，并发送至物联平台。
+
+<a href="/tutorial/starbox_collection/sb3/15/探究热水降温规律.sb3">点击下载程序: 探究热水降温规律.sb3</a>
+
+<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+
+
+<img src="/images/15/探究热水降温规律1.png">
+
+① 共4种容器，故初始化长度为4的列表，其元素索引分别代表容器1-4的相关数据
+
+② 刷新当前检测的水温，并记入水温列表
+
+③ 仅当温度为80℃时，才开始记录降温时长
+
+<img src="/images/15/探究热水降温规律2.png">
+
