--- a/docs/第八单元_人工智能与创新/大语言模型交互.md
+++ b/docs/第八单元_人工智能与创新/大语言模型交互.md
@@ -23,9 +23,7 @@ sidebarDepth: 2
 <br>
 <br>
 
-### **2）免费领取/购买星火大模型API使用配额** 
-
-- 选择Spark 4.0 Ultra模型
+### **2）免费领取/购买星火大模型API使用配额（以Spark 4.0 Ultra为例）** 
 
 <img src="/images/docimg/Snipaste_2025-08-06_10-41-58.png" >
 
@@ -84,5 +82,13 @@ sidebarDepth: 2
 
 <img src="/images/docimg/Snipaste_2025-08-06_12-30-11.png">
 
+<p class="attention">注意：如需使用其他版本的语言模型，可领取/购买相应配额，操作流程如上。</p>
 
+- 版本差异
+
+响应时间：Lite < Pro < Ultra
+
+回复质量：Ultra > Pro > Lite
+
+<img src="/images/docimg/Snipaste_2025-08-14_16-47-16.png">
 
