--- a/docs/第三单元_反馈与优化/模拟空调控制室温.md
+++ b/docs/第三单元_反馈与优化/模拟空调控制室温.md
@@ -14,7 +14,7 @@
 
 <a href="/tutorial/starbox_collection/sb3/03/模拟空调控制室温过程.sb3">点击下载程序: 模拟空调控制室温过程.sb3</a>
 
-<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+<a href="https://www.bilibili.com/video/BV1JiYaz9EEi/?spm_id_from=333.1387.upload.video_card.click&vd_source=d34a80bae9d64a0c5a0716bd47877802" target="_blank">点击查看演示视频</a>
 
 ① 板载温湿度传感器读取数据为小数，为优化显示效果，做向下取整处理，例如25.3567 -> 25。
 
