--- a/docs/第二单元_控制与系统基础/自动读秒交通灯.md
+++ b/docs/第二单元_控制与系统基础/自动读秒交通灯.md
@@ -10,7 +10,7 @@
 
 <a href="/tutorial/starbox_collection/sb3/01/自动读秒交通灯（基础）.sb3">点击下载程序: 自动读秒交通灯（基础）.sb3</a>
 
-<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+<a href="https://www.bilibili.com/video/BV1EBYazpEVv/?spm_id_from=333.1387.upload.video_card.click&vd_source=d34a80bae9d64a0c5a0716bd47877802" target="_blank">点击查看演示视频</a>
 
 <img src="/images/01/自动读秒交通灯（基础）.png">
 
@@ -22,6 +22,8 @@
 增加屏显倒计时秒数功能
 
 <a href="/tutorial/starbox_collection/sb3/01/自动读秒交通灯（进阶）.sb3">点击下载程序: 自动读秒交通灯（进阶）.sb3</a>
+
+<a href="https://www.bilibili.com/video/BV1BBYazpEJx/?spm_id_from=333.1387.upload.video_card.click&vd_source=d34a80bae9d64a0c5a0716bd47877802" target="_blank">点击查看演示视频</a>
 
 <img src="/images/01/自动读秒交通灯（进阶）1.png">
 
