--- a/docs/第四单元_机器人与汽车应用/循线机器人.md
+++ b/docs/第四单元_机器人与汽车应用/循线机器人.md
@@ -9,7 +9,7 @@
 
 <a href="/tutorial/starbox_collection/sb3/循线机器人.sb3">点击下载程序: 循线机器人.sb3</a>
 
-<a href="https://www.cfunworld.com" target="_blank">点击查看演示视频</a>
+<a href="https://www.bilibili.com/video/BV1ziYaz9EBs/?spm_id_from=333.1387.upload.video_card.click&vd_source=d34a80bae9d64a0c5a0716bd47877802" target="_blank">点击查看演示视频</a>
 
 车头底部中央板载了2个灰度传感器，探头朝下，用于检测地面灰度值大小。
 
